# yo-rust-ruta

./: README.md
async_and_concurrency/: Cargo.toml
async_and_concurrency/src/: main.rs
async_book/: Cargo.toml
async_book/src/: main.rs
async_book/tokio_example/: Cargo.toml
basic_concept/src/: main.rs  variables.rs
collection/src/: company.rs  main.rs
crawler/: Cargo.toml
crawler/migrations/2023-02-15-150101_create_posts/: down.sql  up.sql
crawler/src/: crawler.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
crawler/src/entity/: news.rs
crawler/src/spider/: hackernews.rs  mod.rs
data-book/: Cargo.toml
data-book/src/: deque.rs  lib.rs  linklist.rs  lvec.rs  queue.rs  stack.rs
enum_/src/: main.rs
error_handle/src/: main.rs
functional_program/: Cargo.toml
functional_program/src/: main.rs
generics/src/: lib.rs  main.rs
google-project/: Cargo.toml
google-project/src/: concurrency.rs  gui_library.rs  health_statistic.rs  library.rs  luhn_alogorithm.rs  main.rs  polygon.rs  router_prefix.rs
gpt/: Cargo.toml
gpt/src/: main.rs
grpc-longHu/: Cargo.toml  Dockerfile  Makefile  longhu.yaml  server-compose.yaml
grpc-longHu/proto/: helloworld.proto
grpc-longHu/src/: db.rs  lib.rs
grpc-longHu/src/entity/: mod.rs  name_table.rs  prelude.rs
guessing_game/src/: main.rs
hello_world/: main  main.rs
lifetime/src/: main.rs
tikv-cli/: Cargo.toml
tui/: Cargo.toml
wasm_export/: Cargo.toml  index.html  index.js
wasm_hello_world/: Cargo.toml  index.html  index.js
wasm_linear_memory/: Cargo.toml  index.html  index.js
(+28 files in other folders)
