[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = { version = "3.1", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
scraper =  "0.14"
url = "2.2"
time = "0.1"
futures = "0.3"
tokio-stream = "0.1"
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
dotenv = "0.15.0"
native-tls = "0.2.11"
chrono = "0.4"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"

